# BattleShipGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: AIPlayer.cpp  AIPlayer.h  BattleshipGame.cpp  BattleshipGame.h  CMakeLists.txt  GameState.cpp  GameState.h  Grid.cpp  Grid.h  Renderer.cpp  Renderer.h  Ship.cpp  Ship.h  main.cpp
